--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.13.11"
+  "version": "0.13.11",
+  "registry": "http://localhost:4873",
+  "command": {
+		"publish": {
+			"verifyAccess": false
+		}
+	}
 }
