--- a/packages/cubejs-athena-driver/package.json
+++ b/packages/cubejs-athena-driver/package.json
@@ -17,5 +17,6 @@
     "aws-sdk": "^2.403.0",
     "sqlstring": "^2.3.1"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "gitHead": "6f2dea3253db4540e81a95110fd019e22797280e"
 }
