--- a/packages/cubejs-jdbc-driver/package.json
+++ b/packages/cubejs-jdbc-driver/package.json
@@ -19,5 +19,6 @@
     "node-java-maven": "^0.1.1",
     "sqlstring": "^2.3.0"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "gitHead": "6f2dea3253db4540e81a95110fd019e22797280e"
 }
