--- a/packages/cubejs-serverless/package.json
+++ b/packages/cubejs-serverless/package.json
@@ -23,5 +23,6 @@
     "mocha": "^5.2.0",
     "should": "^13.2.3"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "gitHead": "6f2dea3253db4540e81a95110fd019e22797280e"
 }
