--- a/packages/cubejs-vue/package.json
+++ b/packages/cubejs-vue/package.json
@@ -67,5 +67,6 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "6f2dea3253db4540e81a95110fd019e22797280e"
 }
